--- a/bill_split/render.yaml
+++ b/bill_split/render.yaml
@@ -1,11 +1,13 @@
 services:
   - type: web
-    name: split-bill-app
+    name: bill-splitter
     env: python
-    buildCommand: "./build.sh"
+    buildCommand: "pip install -r requirements.txt && python manage.py collectstatic --noinput"
     startCommand: "gunicorn bill_split.wsgi:application"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: bill_split.settings
-      - key: PYTHON_VERSION
-        value: "3.11"
+      - key: SECRET_KEY
+        value: django-insecure-592ti8b3@%34-)w$ul=9(yuou3cb$91(7c)=w*bz)ewngww%#1
+      - key: DEBUG
+        value: False
